Fix nav spacing

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ nav {
 
 nav ul {
   margin: 0;
+  gap: 40px;
 }
 
 @media only screen and (min-width: 767px) {
